force-app/main/default/objects/FLIP_Event__c/FLIP_Event__c.object-meta.xml
<CustomObject>
    <description>Two record types, Event and TL Events.  TL Event was migrated form the old TL Event object</description>
    <label>Events</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>