force-app/main/default/objects/FLIP_Event__c/fields/AFL_Fee__c.field-meta.xml
<CustomField>
    <fullName>AFL_Fee__c</fullName>
    <inlineHelpText>How many premium credits should an AFL pay to attend this event? A premium credit is worth £125.</inlineHelpText>
    <label>AFL Fee</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>