force-app/main/default/objects/FLIP_Event__c/fields/Allowed_Status__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Status__c</fullName>
    <label>Allowed Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Statuses</fullName>
            </value>
            <value>
                <fullName>Future Leaders only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>