force-app/main/default/objects/FLIP_Event__c/fields/Applicability__c.field-meta.xml
<CustomField>
    <fullName>Applicability__c</fullName>
    <inlineHelpText>Please enter a value from 0%-100%.</inlineHelpText>
    <label>Applicability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>