force-app/main/default/objects/FLIP_Event__c/fields/Applicability_Score__c.field-meta.xml
<CustomField>
    <fullName>Applicability_Score__c</fullName>
    <description>Copied from TL Event Object</description>
    <label>Applicability Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>