force-app/main/default/objects/FLIP_Event__c/fields/Application_of_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Application_of_knowledge__c</fullName>
    <inlineHelpText>%, # pps stating how they’ll apply knowledge / total # forms</inlineHelpText>
    <label>Application of knowledge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>