force-app/main/default/objects/FLIP_Event__c/fields/Areas_for_Development_1F__c.field-meta.xml
<CustomField>
    <fullName>Areas_for_Development_1F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Areas for Development 1F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>