force-app/main/default/objects/FLIP_Event__c/fields/Areas_of_Development_2F__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Development_2F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Areas of Development 2F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>