force-app/main/default/objects/FLIP_Event__c/fields/Assessor_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Name__c</fullName>
    <label>Assessor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>