force-app/main/default/objects/FLIP_Event__c/fields/Atlas_Event_Ref__c.field-meta.xml
<CustomField>
    <fullName>Atlas_Event_Ref__c</fullName>
    <description>Copied from TL Event.  Should be decommissioned when no longer needed for ATLAS</description>
    <label>Atlas Event Ref</label>
    <length>15</length>
    <type>Text</type>
</CustomField>