force-app/main/default/objects/FLIP_Event__c/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <formula>$Setup.URL__c.URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BaseURL</label>
    <type>Text</type>
</CustomField>