force-app/main/default/objects/FLIP_Event__c/fields/Being_Organised_Structured_1F__c.field-meta.xml
<CustomField>
    <fullName>Being_Organised_Structured_1F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Being Organised &amp; Structured 1F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>