force-app/main/default/objects/FLIP_Event__c/fields/BSR_Rating_1F__c.field-meta.xml
<CustomField>
    <fullName>BSR_Rating_1F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>BSR Rating 1F</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_10</valueSetName>
    </valueSet>
</CustomField>