force-app/main/default/objects/FLIP_Event__c/fields/Building_a_Sustaining_Relationship_2F__c.field-meta.xml
<CustomField>
    <fullName>Building_a_Sustaining_Relationship_2F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Building a Sustaining Relationship 2F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>