force-app/main/default/objects/FLIP_Event__c/fields/Cohort_lkp__c.field-meta.xml
<CustomField>
    <fullName>Cohort_lkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>TL_Programme__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>