force-app/main/default/objects/FLIP_Event__c/fields/Cohort_Name__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Name__c</fullName>
    <formula>Cohort_lkp__r.Cohort_Name__c</formula>
    <label>Cohort Name</label>
    <type>Text</type>
</CustomField>