force-app/main/default/objects/FLIP_Event__c/fields/Compulsory_NPQ_content__c.field-meta.xml
<CustomField>
    <fullName>Compulsory_NPQ_content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compulsory NPQ content</label>
    <type>Checkbox</type>
</CustomField>