force-app/main/default/objects/FLIP_Event__c/fields/Details_of_Expertise_1F__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Expertise_1F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Details of Expertise 1F</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>D&amp;T</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Facilitation</fullName>
            </value>
            <value>
                <fullName>G&amp;T</fullName>
            </value>
            <value>
                <fullName>Humanities</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Kilmann</fullName>
            </value>
            <value>
                <fullName>Leadership and Management</fullName>
            </value>
            <value>
                <fullName>Literacy</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>MBTI</fullName>
            </value>
            <value>
                <fullName>MFL</fullName>
            </value>
            <value>
                <fullName>NLP</fullName>
            </value>
            <value>
                <fullName>NPQH</fullName>
            </value>
            <value>
                <fullName>OFSTED</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pastoral</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>PSDG</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>SEN</fullName>
            </value>
            <value>
                <fullName>SLT</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Transactional Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>