force-app/main/default/objects/FLIP_Event__c/fields/Disable_RSVP_Function__c.field-meta.xml
<CustomField>
    <fullName>Disable_RSVP_Function__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable RSVP Function</label>
    <type>Checkbox</type>
</CustomField>