force-app/main/default/objects/FLIP_Event__c/fields/Email_Sent_to_QA_er__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_to_QA_er__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied from TL Event object</description>
    <label>Email Sent to QA&#39;er</label>
    <type>Checkbox</type>
</CustomField>