force-app/main/default/objects/FLIP_Event__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>00:00</fullName>
            </value>
            <value>
                <fullName>00:30</fullName>
            </value>
            <value>
                <fullName>01:00</fullName>
            </value>
            <value>
                <fullName>01:30</fullName>
            </value>
            <value>
                <fullName>02:00</fullName>
            </value>
            <value>
                <fullName>02:30</fullName>
            </value>
            <value>
                <fullName>03:00</fullName>
            </value>
            <value>
                <fullName>03:30</fullName>
            </value>
            <value>
                <fullName>04:00</fullName>
            </value>
            <value>
                <fullName>04:30</fullName>
            </value>
            <value>
                <fullName>05:00</fullName>
            </value>
            <value>
                <fullName>05:30</fullName>
            </value>
            <value>
                <fullName>06:00</fullName>
            </value>
            <value>
                <fullName>06:30</fullName>
            </value>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>07:30</fullName>
            </value>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>08:15</fullName>
            </value>
            <value>
                <fullName>08:30</fullName>
            </value>
            <value>
                <fullName>08:45</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>09:15</fullName>
            </value>
            <value>
                <fullName>09:30</fullName>
            </value>
            <value>
                <fullName>09:45</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:15</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>10:45</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>