force-app/main/default/objects/FLIP_Event__c/fields/Ethnicity_Fac_1__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Fac_1__c</fullName>
    <description>this is used in NPQ reports</description>
    <formula>TEXT(Facilitator_1__r.Ethnic_Background__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethnicity Fac 1</label>
    <type>Text</type>
</CustomField>