force-app/main/default/objects/FLIP_Event__c/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <label>Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introduction to the topic</fullName>
            </value>
            <value>
                <fullName>Advancing skills and knowledge</fullName>
            </value>
            <value>
                <fullName>Making a whole school impact</fullName>
            </value>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Phase 5</fullName>
            </value>
            <value>
                <fullName>Suitable for all</fullName>
            </value>
            <value>
                <fullName>Phase 6</fullName>
            </value>
            <value>
                <fullName>Phase 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>