force-app/main/default/objects/FLIP_Event__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Event Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD1</fullName>
            </value>
            <value>
                <fullName>CD2</fullName>
            </value>
            <value>
                <fullName>CD3</fullName>
            </value>
            <value>
                <fullName>CD4</fullName>
            </value>
            <value>
                <fullName>CD5</fullName>
            </value>
            <value>
                <fullName>CD6</fullName>
            </value>
            <value>
                <fullName>CD7</fullName>
            </value>
            <value>
                <fullName>CD8</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>S4</fullName>
            </value>
            <value>
                <fullName>S5</fullName>
            </value>
            <value>
                <fullName>S6</fullName>
            </value>
            <value>
                <fullName>S7</fullName>
            </value>
            <value>
                <fullName>S8</fullName>
            </value>
            <value>
                <fullName>S9</fullName>
            </value>
            <value>
                <fullName>S10</fullName>
            </value>
            <value>
                <fullName>S11</fullName>
            </value>
            <value>
                <fullName>S12</fullName>
            </value>
            <value>
                <fullName>S13</fullName>
            </value>
            <value>
                <fullName>S14</fullName>
            </value>
            <value>
                <fullName>S15</fullName>
            </value>
            <value>
                <fullName>S16</fullName>
            </value>
            <value>
                <fullName>S17</fullName>
            </value>
            <value>
                <fullName>S18</fullName>
            </value>
            <value>
                <fullName>JPD1</fullName>
            </value>
            <value>
                <fullName>JPD2</fullName>
            </value>
            <value>
                <fullName>JPD3</fullName>
            </value>
            <value>
                <fullName>JPD4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>