force-app/main/default/objects/FLIP_Event__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <label>Event Description</label>
    <type>TextArea</type>
</CustomField>