force-app/main/default/objects/FLIP_Event__c/fields/Event_Description_Rich__c.field-meta.xml
<CustomField>
    <fullName>Event_Description_Rich__c</fullName>
    <label>Event Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>