force-app/main/default/objects/FLIP_Event__c/fields/Event_Organiser_2__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Organiser 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events2</relationshipName>
    <type>Lookup</type>
</CustomField>