force-app/main/default/objects/FLIP_Event__c/fields/Event_Organiser_3__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Organiser 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events3</relationshipName>
    <type>Lookup</type>
</CustomField>