force-app/main/default/objects/FLIP_Event__c/fields/Event_Organiser_4__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Organiser 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events4</relationshipName>
    <type>Lookup</type>
</CustomField>