force-app/main/default/objects/FLIP_Event__c/fields/Event_Organiser__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Organiser 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>