force-app/main/default/objects/FLIP_Event__c/fields/Event_Picture__c.field-meta.xml
<CustomField>
    <fullName>Event_Picture__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Picture_Id__c , &quot;Event Picture&quot;, 200, 200)</formula>
    <label>Event Picture</label>
    <type>Text</type>
</CustomField>