force-app/main/default/objects/FLIP_Event__c/fields/Event_Region__c.field-meta.xml
<CustomField>
    <fullName>Event_Region__c</fullName>
    <label>Event Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East of England</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>South Coast</fullName>
            </value>
            <value>
                <fullName>Yorkshire and the Humber</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>