force-app/main/default/objects/FLIP_Event__c/fields/Event_score_comments__c.field-meta.xml
<CustomField>
    <fullName>Event_score_comments__c</fullName>
    <inlineHelpText>Use to explain any particularly high or low scores and to give any other context for scores</inlineHelpText>
    <label>Event score comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>