force-app/main/default/objects/FLIP_Event__c/fields/Event_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Event_Sub_type__c</fullName>
    <label>Event Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MAT visit</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Training module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>