force-app/main/default/objects/FLIP_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alumni Weekend</fullName>
            </value>
            <value>
                <fullName>Annual Conference</fullName>
            </value>
            <value>
                <fullName>BAME into Headship event</fullName>
            </value>
            <value>
                <fullName>Career support day</fullName>
            </value>
            <value>
                <fullName>Celebration event</fullName>
            </value>
            <value>
                <fullName>Cohort Weekend</fullName>
            </value>
            <value>
                <fullName>Day Conference</fullName>
            </value>
            <value>
                <fullName>Executive Educators Events</fullName>
            </value>
            <value>
                <fullName>Headship Institute event</fullName>
            </value>
            <value>
                <fullName>Headship Now! event</fullName>
            </value>
            <value>
                <fullName>Induction event</fullName>
            </value>
            <value>
                <fullName>Mock interview day</fullName>
            </value>
            <value>
                <fullName>Module Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peer visit</fullName>
            </value>
            <value>
                <fullName>Regional Training</fullName>
            </value>
            <value>
                <fullName>Talented Leaders Programme</fullName>
            </value>
            <value>
                <fullName>Twilight</fullName>
            </value>
            <value>
                <fullName>UK Study Tour</fullName>
            </value>
            <value>
                <fullName>Women into Headship event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>