force-app/main/default/objects/FLIP_Event__c/fields/Event_Weighting_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Event_Weighting_Allowance__c</fullName>
    <inlineHelpText>Used in calculating score</inlineHelpText>
    <label>Event Weighting Allowance</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>