force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_1__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copied from TL Event object</description>
    <label>Facilitator 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Facilitator__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Facilitator 1)</relationshipLabel>
    <relationshipName>Events_Facilitator_1_a</relationshipName>
    <type>Lookup</type>
</CustomField>