force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_1_Name__c</fullName>
    <description>Copied from the TL Event object</description>
    <formula>Facilitator_1__r.FirstName + &quot; &quot; + Facilitator_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facilitator 1 Name</label>
    <type>Text</type>
</CustomField>