force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_1_role__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_1_role__c</fullName>
    <label>Facilitator 1 role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>