force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_1_Scheduling_Status__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_1_Scheduling_Status__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Facilitator 1 Scheduling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SchedulingStatus</valueSetName>
    </valueSet>
</CustomField>