force-app/main/default/objects/FLIP_Event__c/fields/Facilitator_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_2_Name__c</fullName>
    <description>Copied from TL Event object</description>
    <formula>Facilitator_2__r.FirstName + &quot; &quot; + Facilitator_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facilitator 2 Name</label>
    <type>Text</type>
</CustomField>